Moved the city name in zoomed mode to prevent overlap.
Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/pattern-list-details-redux/src/components/Content.module.less
+++ b/pattern-list-details-redux/src/components/Content.module.less
@@ -7,6 +7,11 @@
 		right: 0;
 		bottom: 0;
 		left: 0;
+
+		.cityName {
+			top: auto;
+			bottom: 12px;
+		}
 	}
 
 	.image {
